vga_project/local_testing_vga_ip_1/local_testing_vga_ip_1.sdk/.metadata/.plugins/org.eclipse.cdt.ui/vga_coord.build.log
16:38:34 **** Auto Build of configuration Debug for project vga_coord ****
make all 
'Building file: ../src/main.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -I../../vga_coord_bsp/microblaze_0/include -mlittle-endian -mcpu=v11.0 -mxl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
../src/main.c: In function 'getWiiFontIndex':
../src/main.c:113:32: error: 'wiiFont' undeclared (first use in this function)
     for (int i = 0; i < sizeof(wiiFont)/sizeof(FontChar); i++)
                                ^~~~~~~
../src/main.c:113:32: note: each undeclared identifier is reported only once for each function it appears in
../src/main.c:113:48: error: 'FontChar' undeclared (first use in this function); did you mean 'putchar'?
     for (int i = 0; i < sizeof(wiiFont)/sizeof(FontChar); i++)
                                                ^~~~~~~~
                                                putchar
../src/main.c: In function 'drawChar':
../src/main.c:120:29: error: 'wiiFont' undeclared (first use in this function)
     const uint8_t *bitmap = wiiFont[idx].bitmap;
                             ^~~~~~~
../src/main.c:121:29: error: 'FONT_HEIGHT' undeclared (first use in this function)
     for (int row = 0; row < FONT_HEIGHT; row++) {
                             ^~~~~~~~~~~
../src/main.c:122:33: error: 'FONT_WIDTH' undeclared (first use in this function); did you mean 'FONT_HEIGHT'?
         for (int col = 0; col < FONT_WIDTH; col++) {
                                 ^~~~~~~~~~
                                 FONT_HEIGHT
../src/main.c:124:17: warning: implicit declaration of function 'drawBox'; did you mean 'drawChar'? [-Wimplicit-function-declaration]
                 drawBox(x + col * scale, y + row * scale, scale, scale, color);
                 ^~~~~~~
                 drawChar
../src/main.c:119:9: warning: variable 'idx' set but not used [-Wunused-but-set-variable]
     int idx = getWiiFontIndex(c);
         ^~~
../src/main.c: In function 'drawText':
../src/main.c:133:15: error: 'FONT_WIDTH' undeclared (first use in this function); did you mean '__INT_WIDTH__'?
         x += (FONT_WIDTH * scale);
               ^~~~~~~~~~
               __INT_WIDTH__
../src/main.c: In function 'drawStatus':
../src/main.c:139:33: error: 'WHITE' undeclared (first use in this function)
     drawText(x+10, y, "Round ", WHITE, 2);
                                 ^~~~~
../src/main.c: In function 'drawTitleScreen':
../src/main.c:147:5: warning: implicit declaration of function 'clear_screen'; did you mean 'clearerr'? [-Wimplicit-function-declaration]
     clear_screen(WHITE);
     ^~~~~~~~~~~~
     clearerr
../src/main.c:147:18: error: 'WHITE' undeclared (first use in this function)
     clear_screen(WHITE);
                  ^~~~~
../src/main.c:148:21: error: 'RESOLUTION_X' undeclared (first use in this function)
     drawBox(0, 320, RESOLUTION_X, 20, TURQUOISE);
                     ^~~~~~~~~~~~
../src/main.c:148:39: error: 'TURQUOISE' undeclared (first use in this function)
     drawBox(0, 320, RESOLUTION_X, 20, TURQUOISE);
                                       ^~~~~~~~~
../src/main.c:149:39: error: 'ORANGE' undeclared (first use in this function)
     drawBox(0, 350, RESOLUTION_X, 20, ORANGE);
                                       ^~~~~~
../src/main.c:150:29: error: 'GREY' undeclared (first use in this function)
     drawText(50, 80, "Wii", GREY, 8);
                             ^~~~
../src/main.c: In function 'drawMainMenu':
../src/main.c:158:18: error: 'WHITE' undeclared (first use in this function)
     clear_screen(WHITE);
                  ^~~~~
../src/main.c:159:20: error: 'RESOLUTION_X' undeclared (first use in this function)
     drawBox(0, 20, RESOLUTION_X, 16, TURQUOISE);
                    ^~~~~~~~~~~~
../src/main.c:159:38: error: 'TURQUOISE' undeclared (first use in this function)
     drawBox(0, 20, RESOLUTION_X, 16, TURQUOISE);
                                      ^~~~~~~~~
../src/main.c:160:38: error: 'ORANGE' undeclared (first use in this function)
     drawBox(0, 40, RESOLUTION_X, 16, ORANGE);
                                      ^~~~~~
../src/main.c:162:43: error: 'GREY' undeclared (first use in this function)
     drawText(80, 80, "Enter Player Info", GREY, 4);
                                           ^~~~
../src/main.c:168:24: error: 'p1_name' undeclared (first use in this function); did you mean 'rename'?
     drawText(280, 165, p1_name, BLACK, 3);
                        ^~~~~~~
                        rename
../src/main.c:168:33: error: 'BLACK' undeclared (first use in this function)
     drawText(280, 165, p1_name, BLACK, 3);
                                 ^~~~~
../src/main.c:169:9: error: 'entering_p1' undeclared (first use in this function)
     if (entering_p1 && !names_complete) drawText(275 + (name_cursor * 21), 165, "_", TURQUOISE, 3);
         ^~~~~~~~~~~
../src/main.c:169:25: error: 'names_complete' undeclared (first use in this function)
     if (entering_p1 && !names_complete) drawText(275 + (name_cursor * 21), 165, "_", TURQUOISE, 3);
                         ^~~~~~~~~~~~~~
../src/main.c:169:57: error: 'name_cursor' undeclared (first use in this function)
     if (entering_p1 && !names_complete) drawText(275 + (name_cursor * 21), 165, "_", TURQUOISE, 3);
                                                         ^~~~~~~~~~~
../src/main.c:175:24: error: 'p2_name' undeclared (first use in this function); did you mean 'p1_name'?
     drawText(280, 225, p2_name, BLACK, 3);
                        ^~~~~~~
                        p1_name
../src/main.c:179:57: error: 'GREEN' undeclared (first use in this function); did you mean 'GREY'?
         drawText(50, 300, "READY! Press Start on FPGA", GREEN, 3);
                                                         ^~~~~
                                                         GREY
../src/main.c: In function 'poll_keyboard':
../src/main.c:187:47: error: 'PS2_GPIO_ADDR' undeclared (first use in this function); did you mean 'GYRO_GPIO_ADDR'?
     volatile uint32_t *ps2_gpio = (uint32_t *)PS2_GPIO_ADDR;
                                               ^~~~~~~~~~~~~
                                               GYRO_GPIO_ADDR
../src/main.c: In function 'render_keyboard_text_to_vga':
../src/main.c:221:43: error: 'WHITE' undeclared (first use in this function)
         drawText(10, 10, keyboard_buffer, WHITE, 3);
                                           ^~~~~
../src/main.c: In function 'process_keyboard_input':
../src/main.c:231:26: error: 'HW_MAIN_MENU' undeclared (first use in this function)
     if (current_state == HW_MAIN_MENU && !names_complete) {
                          ^~~~~~~~~~~~
../src/main.c:231:43: error: 'names_complete' undeclared (first use in this function)
     if (current_state == HW_MAIN_MENU && !names_complete) {
                                           ^~~~~~~~~~~~~~
../src/main.c:232:29: error: 'entering_p1' undeclared (first use in this function)
         char* current_buf = entering_p1 ? p1_name : p2_name;
                             ^~~~~~~~~~~
../src/main.c:232:43: error: 'p1_name' undeclared (first use in this function); did you mean 'rename'?
         char* current_buf = entering_p1 ? p1_name : p2_name;
                                           ^~~~~~~
                                           rename
../src/main.c:232:53: error: 'p2_name' undeclared (first use in this function); did you mean 'p1_name'?
         char* current_buf = entering_p1 ? p1_name : p2_name;
                                                     ^~~~~~~
                                                     p1_name
../src/main.c:235:17: error: 'name_cursor' undeclared (first use in this function); did you mean 'keyboard_cursor'?
             if (name_cursor > 0) { // Don't allow empty names
                 ^~~~~~~~~~~
                 keyboard_cursor
../src/main.c:252:60: error: 'MAX_NAME_LEN' undeclared (first use in this function); did you mean 'MAX_INPUT_LEN'?
         else if (key >= ' ' && key <= '~' && name_cursor < MAX_NAME_LEN) {
                                                            ^~~~~~~~~~~~
                                                            MAX_INPUT_LEN
../src/main.c:232:15: warning: variable 'current_buf' set but not used [-Wunused-but-set-variable]
         char* current_buf = entering_p1 ? p1_name : p2_name;
               ^~~~~~~~~~~
make: *** [src/subdir.mk:23: src/main.o] Error 1

16:38:34 Build Finished (took 268ms)

